reference/7.0/Microsoft.PowerShell.Utility/Microsoft.PowerShell.Utility.md
---
Download Help Link: https://go.microsoft.com/fwlink/?linkid=2113633
Help Version: 7.0.0.0
keywords: powershell,cmdlet
locale: en-US
Module Guid: 1da87e53-152b-403e-98dc-74d7b4d63d59
Module Name: Microsoft.PowerShell.Utility
ms.date: 06/09/2017
schema: 2.0.0
title: Microsoft.PowerShell.Utility
---
# Microsoft.PowerShell.Utility Module

## Description

This section contains the help topics for the cmdlets that are installed with the
Microsoft.PowerShell.Utility module. This module contains cmdlets that manage the basic features of
PowerShell.

## Microsoft.PowerShell.Utility Cmdlets

### [Add-Member](Add-Member.md)

Adds custom properties and methods to an instance of a PowerShell object.

### [Add-Type](Add-Type.md)

Adds a Microsoft .NET Core class to a PowerShell session.

### [Clear-Variable](Clear-Variable.md)

Deletes the value of a variable.

### [Compare-Object](Compare-Object.md)

Compares two sets of objects.

### [ConvertFrom-Csv](ConvertFrom-Csv.md)

Converts object properties in comma-separated value (CSV) format into CSV versions of the original objects.

### [ConvertFrom-Json](ConvertFrom-Json.md)

Converts a JSON-formatted string to a custom object or a hash table.

### [ConvertFrom-Markdown](ConvertFrom-Markdown.md)

Convert the contents of a string or a file to a **MarkdownInfo** object.

### [ConvertFrom-SddlString](ConvertFrom-SddlString.md)

Converts a SDDL string to a custom object.

### [ConvertFrom-StringData](ConvertFrom-StringData.md)

Converts a string containing one or more key and value pairs to a hash table.

### [ConvertTo-Csv](ConvertTo-Csv.md)

Converts objects into a series of character-separated value (CSV) strings.

### [ConvertTo-Html](ConvertTo-Html.md)

Converts Microsoft .NET Framework objects into HTML that can be displayed in a Web browser.

### [ConvertTo-Json](ConvertTo-Json.md)

Converts an object to a JSON-formatted string.

### [ConvertTo-Xml](ConvertTo-Xml.md)

Creates an XML-based representation of an object.

### [Debug-Runspace](Debug-Runspace.md)

Starts an interactive debugging session with a runspace.

### [Disable-PSBreakpoint](Disable-PSBreakpoint.md)

Disables the breakpoints in the current console.

### [Disable-RunspaceDebug](Disable-RunspaceDebug.md)

Disables debugging on one or more runspaces, and releases any pending debugger stop.

### [Enable-PSBreakpoint](Enable-PSBreakpoint.md)

Enables the breakpoints in the current console.

### [Enable-RunspaceDebug](Enable-RunspaceDebug.md)

Enables debugging on runspaces where any breakpoint is preserved until a debugger is attached.

### [Export-Alias](Export-Alias.md)

Exports information about currently defined aliases to a file.

### [Export-Clixml](Export-Clixml.md)

Creates an XML-based representation of an object or objects and stores it in a file.

### [Export-Csv](Export-Csv.md)

Converts objects into a series of comma-separated value (CSV) strings and saves the strings to a file.

### [Export-FormatData](Export-FormatData.md)

Saves formatting data from the current session in a formatting file.

### [Export-PSSession](Export-PSSession.md)

Exports commands from another session and saves them in a PowerShell module.

### [Format-Custom](Format-Custom.md)

Uses a customized view to format the output.

### [Format-Hex](Format-Hex.md)

Displays a file or other input as hexadecimal.

### [Format-List](Format-List.md)

Formats the output as a list of properties in which each property appears on a new line.

### [Format-Table](Format-Table.md)

Formats the output as a table.

### [Format-Wide](Format-Wide.md)

Formats objects as a wide table that displays only one property of each object.

### [Get-Alias](Get-Alias.md)

Gets the aliases for the current session.

### [Get-Culture](Get-Culture.md)

Gets the current culture set in the operating system.

### [Get-Date](Get-Date.md)

Gets the current date and time.

### [Get-Error](Get-Error.md)

Gets and displays the most recent error messages from the current session.

### [Get-Event](Get-Event.md)

Gets the events in the event queue.

### [Get-EventSubscriber](Get-EventSubscriber.md)

Gets the event subscribers in the current session.

### [Get-FileHash](Get-FileHash.md)

Computes the hash value for a file by using a specified hash algorithm.

### [Get-FormatData](Get-FormatData.md)

Gets the formatting data in the current session.

### [Get-Host](Get-Host.md)

Gets an object that represents the current host program.

### [Get-MarkdownOption](Get-MarkdownOption.md)

Returns the current colors and styles used for rendering Markdown content in the console.

### [Get-Member](Get-Member.md)

Gets the properties and methods of objects.

### [Get-PSBreakpoint](Get-PSBreakpoint.md)

Gets the breakpoints that are set in the current session.

### [Get-PSCallStack](Get-PSCallStack.md)

Displays the current call stack.

### [Get-Random](Get-Random.md)

Gets a random number, or selects objects randomly from a collection.

### [Get-Runspace](Get-Runspace.md)

Gets active runspaces within a PowerShellhost process.

### [Get-RunspaceDebug](Get-RunspaceDebug.md)

Shows runspace debugging options.

### [Get-TraceSource](Get-TraceSource.md)

Gets PowerShell components that are instrumented for tracing.

### [Get-TypeData](Get-TypeData.md)

Gets the extended type data in the current session.

### [Get-UICulture](Get-UICulture.md)

Gets the current UI culture settings in the operating system.

### [Get-Unique](Get-Unique.md)

Returns unique items from a sorted list.

### [Get-Uptime](Get-Uptime.md)

Get the **TimeSpan** since last boot.

### [Get-Variable](Get-Variable.md)

Gets the variables in the current console.

### [Get-Verb](Get-Verb.md)

Gets approved PowerShell verbs.

### [Group-Object](Group-Object.md)

Groups objects that contain the same value for specified properties.

### [Import-Alias](Import-Alias.md)

Imports an alias list from a file.

### [Import-Clixml](Import-Clixml.md)

Imports a CLIXML file and creates corresponding objects in PowerShell.

### [Import-Csv](Import-Csv.md)

Creates table-like custom objects from the items in a comma-separated value (CSV) file.

### [Import-LocalizedData](Import-LocalizedData.md)

Imports language-specific data into scripts and functions based on the UI culture that is selected for the operating system.

### [Import-PowerShellDataFile](Import-PowerShellDataFile.md)

Imports values from a `.PSD1` file without invoking its contents.

### [Import-PSSession](Import-PSSession.md)

Imports commands from another session into the current session.

### [Invoke-Expression](Invoke-Expression.md)

Runs commands or expressions on the local computer.

### [Invoke-RestMethod](Invoke-RestMethod.md)

Sends an HTTP or HTTPS request to a RESTful web service.

### [Invoke-WebRequest](Invoke-WebRequest.md)

Gets content from a web page on the internet.

### [Join-String](Join-String.md)

Combines objects from the pipeline into a single string.

### [Measure-Command](Measure-Command.md)

Measures the time it takes to run script blocks and cmdlets.

### [Measure-Object](Measure-Object.md)

Calculates the numeric properties of objects, and the characters, words, and lines in string objects, such as files of text.

### [New-Alias](New-Alias.md)

Creates a new alias.

### [New-Event](New-Event.md)

Creates a new event.

### [New-Guid](New-Guid.md)

Creates a GUID.

### [New-Object](New-Object.md)

Creates an instance of a Microsoft .NET Framework or COM object.

### [New-TemporaryFile](New-TemporaryFile.md)

Creates a temporary file.

### [New-TimeSpan](New-TimeSpan.md)

Creates a TimeSpan object.

### [New-Variable](New-Variable.md)

Creates a new variable.

### [Out-File](Out-File.md)

Sends output to a file.

### [Out-GridView](Out-GridView.md)

Sends output to an interactive table in a separate window.

### [Out-Printer](Out-Printer.md)

Sends output to a printer.

### [Out-String](Out-String.md)

Sends objects to the host as a series of strings.

### [Read-Host](Read-Host.md)

Reads a line of input from the console.

### [Register-EngineEvent](Register-EngineEvent.md)

Subscribes to events that are generated by the PowerShell engine and by the `New-Event` cmdlet.

### [Register-ObjectEvent](Register-ObjectEvent.md)

Subscribes to the events that are generated by a Microsoft .NET Framework object.

### [Remove-Alias](Remove-Alias.md)

Remove an alias from the current session.

### [Remove-Event](Remove-Event.md)

Deletes events from the event queue.

### [Remove-PSBreakpoint](Remove-PSBreakpoint.md)

Deletes breakpoints from the current console.

### [Remove-TypeData](Remove-TypeData.md)

Deletes extended types from the current session.

### [Remove-Variable](Remove-Variable.md)

Deletes a variable and its value.

### [Select-Object](Select-Object.md)

Selects objects or object properties.

### [Select-String](Select-String.md)

Finds text in strings and files.

### [Select-Xml](Select-Xml.md)

Finds text in an XML string or document.

### [Send-MailMessage](Send-MailMessage.md)

Sends an email message.

### [Set-Alias](Set-Alias.md)

Creates or changes an alias for a cmdlet or other command in the current PowerShell session.

### [Set-Date](Set-Date.md)

Changes the system time on the computer to a time that you specify.

### [Set-MarkdownOption](Set-MarkdownOption.md)

Sets the colors and styles used for rendering Markdown content in the console.

### [Set-PSBreakpoint](Set-PSBreakpoint.md)

Sets a breakpoint on a line, command, or variable.

### [Set-TraceSource](Set-TraceSource.md)

Configures, starts, and stops a trace of PowerShell components.

### [Set-Variable](Set-Variable.md)

Sets the value of a variable. Creates the variable if one with the requested name does not exist.

### [Show-Command](Show-Command.md)

Displays PowerShell command information in a graphical window.

### [Show-Markdown](Show-Markdown.md)

Shows a Markdown file or string in the console in a friendly way using VT100 escape sequences or in a browser using HTML.

### [Sort-Object](Sort-Object.md)

Sorts objects by property values.

### [Start-Sleep](Start-Sleep.md)

Suspends the activity in a script or session for the specified period of time.

### [Tee-Object](Tee-Object.md)

Saves command output in a file or variable and also sends it down the pipeline.

### [Test-Json](Test-Json.md)

Tests whether a string is a valid JSON document

### [Trace-Command](Trace-Command.md)

Configures and starts a trace of the specified expression or command.

### [Unblock-File](Unblock-File.md)

Unblocks files that were downloaded from the Internet.

### [Unregister-Event](Unregister-Event.md)

Cancels an event subscription.

### [Update-FormatData](Update-FormatData.md)

Updates the formatting data in the current session.

### [Update-List](Update-List.md)

Adds items to and removes items from a property value that contains a collection of objects.

### [Update-TypeData](Update-TypeData.md)

Updates the extended type data in the session.

### [Wait-Debugger](Wait-Debugger.md)

Stops a script in the debugger before running the next statement in the script.

### [Wait-Event](Wait-Event.md)

Waits until a particular event is raised before continuing to run.

### [Write-Debug](Write-Debug.md)

Writes a debug message to the console.

### [Write-Error](Write-Error.md)

Writes an object to the error stream.

### [Write-Host](Write-Host.md)

Writes customized output to a host.

### [Write-Information](Write-Information.md)

Specifies how PowerShell handles information stream data for a command.

### [Write-Output](Write-Output.md)

Sends the specified objects to the next command in the pipeline. If the command is the last command in the pipeline, the objects are displayed in the console.

### [Write-Progress](Write-Progress.md)

Displays a progress bar within a PowerShell command window.

### [Write-Verbose](Write-Verbose.md)

Writes text to the verbose message stream.

### [Write-Warning](Write-Warning.md)

Writes a warning message.
